Fixed Double Scroll Bar Issue

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ html, body {
   cursor: crosshair;
   overflow-x: hidden;
   width: 100%;
+  overflow: visible;
 }
 
 
